# python_sorting

./: .pre-commit-config.yaml  README.md  pyproject.toml
algorithms/: __init__.py  merge_sort.py  selection_sort.py
tests/: test_selection_sort.py
