
[tool.poetry]
name = "python_sorting"
version = "0.1.0"
description = ""
authors = ["symonk <jackofspaces@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
