
[tool.poetry]
name = "python_sorting"
version = "0.1.0"
description = "python implementations of common sorting algorithms"
authors = ["symonk <jackofspaces@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.2"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore:RequestsDependencyWarning:"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = 'True'
force_grid_wrap = 0
use_parentheses = 'True'
ensure_newline_before_comments = 'True'
line_length = 120
force_single_line = 'True'
known_first_party = 'algorithms'
default_section = 'THIRDPARTY'
forced_separate = 'tests'
skip = '.tox,.eggs,ci/templates'

[tool.mypy]
mypy_path = '/algorithms'
check_untyped_defs = 'True'
disallow_any_generics = 'True'
ignore_missing_imports = 'False'
show_error_codes = 'True'
strict_equality = 'True'
warn_redundant_casts = 'True'
warn_return_any = 'False'
warn_unreachable = 'True'
warn_unused_configs = 'True'
no_implicit_reexport = 'False'
ignore_errors = 'False'

[tool.black]
target-version = ['py310']
line-length = 120

[tool.flake8]
# flake8 does not currently support pyproject.toml (handle via pre-commit directly).
